# kunai

./: .gitignore  Cargo.toml  Makefile.toml  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  kernel-tracker.yml
.zed/: settings.json
kunai/: Cargo.toml  build.rs
kunai-common/: Cargo.toml  build.rs
kunai-common/.cargo/: config.toml
kunai-common/src/: alloc.rs  bpf_events.rs  bpf_utils.rs  buffer.rs  cgroup.rs  co_re.rs  config.rs  consts.rs  errors.rs  events.rs  io_uring.rs  kprobe.rs  lib.rs  macros.rs  maps.rs  net.rs  option.rs  path.rs  perf.rs  string.rs  syscalls.rs  time.rs  transfer.rs  utils.rs  uuid.rs  version.rs
kunai-common/src/alloc/: bpf.rs
kunai-common/src/aya-helpers/: Cargo.toml
kunai-common/src/aya-helpers/src/: helpers.rs  lib.rs
kunai-common/src/bpf_events/: bpf.rs  clone.rs  events.rs  exit.rs  init_module.rs  mount.rs  mprotect.rs  perfs.rs  schedule.rs  send_entropy.rs  user.rs
kunai-common/src/bpf_events/events/: bpf.rs  clone.rs  connect.rs  correlation.rs  dns_query.rs  error.rs  execve.rs  exit.rs  fs.rs  init_module.rs  io_uring.rs  kill.rs  log.rs  loss.rs  mmap.rs  mount.rs  mprotect.rs  perfs.rs  prctl.rs  ptrace.rs  schedule.rs  send_entropy.rs  status.rs  syscore_resume.rs
kunai-common/src/buffer/: bpf.rs  user.rs
kunai-common/src/cgroup/: bpf.rs  user.rs
kunai-common/src/co_re/: core_bpf.rs  core_cgroup.rs  core_clone_args.rs  core_cred.rs  core_exec.rs  core_files_struct.rs  core_fs.rs  core_io_uring.rs  core_iov.rs  core_kernfs.rs  core_lkm.rs  core_mm_struct.rs  core_ns.rs  core_page.rs  core_sock.rs  core_socket_filters.rs  core_task_struct.rs  gen.rs
kunai-common/src/co_re/c/: shim.c  types.h
kunai-common/src/config/: bpf.rs  user.rs
kunai-common/src/errors/: bpf.rs
kunai-common/src/events/: bpf.rs  connect.rs  correlation.rs  dns_query.rs  execve.rs  fs.rs  mmap.rs  perfs.rs  prctl.rs  schedule.rs
kunai-common/src/kprobe/: bpf.rs
kunai-common/src/kunai-macros/: Cargo.toml
kunai-common/src/kunai-macros/src/: lib.rs
kunai-common/src/kunai-macros/tests/: macros-tests.rs
kunai-common/src/maps/: bpf.rs
kunai-common/src/net/: bpf.rs  user.rs
kunai-common/src/path/: bpf.rs  user.rs
kunai-common/src/string/: bpf.rs  user.rs
kunai-common/src/syscalls/: bpf.rs
kunai-common/src/utils/: bpf.rs  user.rs
kunai-common/src/uuid/: bpf.rs  user.rs
kunai-common/src/version/: bpf.rs  user.rs
kunai-ebpf/: Cargo.toml  release.toml  rust-toolchain.toml
kunai-ebpf/.cargo/: config.toml
kunai-ebpf/src/: alloc.rs  error.rs  lib.rs  main.rs  maps.rs  probes.rs  util.rs
kunai-ebpf/src/probes/: bpf.rs  bpf_socket.rs  clone.rs  connect.rs  debug.rs  dns.rs  execve.rs  exit.rs  fd_install.rs  fs.rs  init_module.rs  io_uring.rs  kill.rs  lsm.rs  mmap.rs  mount.rs  mprotect.rs  prctl.rs  ptrace.rs  save.rs  schedule.rs  send_data.rs  syscore_resume.rs
kunai-macros/: Cargo.toml
kunai-macros/src/: lib.rs
kunai-macros/tests/: macros-tests.rs
kunai/.cargo/: config.toml
kunai/src/: cache.rs  compat.rs  config.rs  containers.rs  events.rs  hcache.rs  info.rs  ioc.rs  lib.rs  main.rs  util.rs  yara.rs
kunai/src/events/: agent.rs  start.rs
kunai/src/tests/: kernel.rs
kunai/src/util/: account.rs  bpf.rs  defer.rs  elf.rs  namespace.rs  namespaces.rs  serde.rs  uname.rs  uptime.rs
scripts/: musl-build.sh  update-aya.sh  vmlinux.sh
scripts/ci/: test_kernel.sh
xlaunch/: Cargo.toml
xlaunch/src/: main.rs
xstub/: Cargo.toml
xstub/src/: main.rs
xtask/: Cargo.toml
xtask/src/: build_ebpf.rs  ebpf.rs  git.rs  linker.rs  main.rs  run.rs  tools.rs  user.rs  utils.rs
