[package]
name = "kunai-common"
edition = "2021"
description = "Package providing shared structures between eBPF and userland"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = []
user = ["aya", "dns-parser", "uuid", "thiserror", "serde"]

[build-dependencies]
bindgen = "0.69"

[dependencies]
# optional deps (only for userland)
thiserror = { version = "1.0", optional = true }
uuid = { version = "1.3.0", optional = true, features = ["v4"] }
dns-parser = { version = "0.8.0", optional = true }
serde = { version = "1.0.164", features = ["derive"], optional = true }

# Non Aya deps
cfg-if = "1.0.0"
paste = "1.0"
kunai-macros = { path = "src/kunai-macros" }

# Aya deps
aya = { version = "0.12.0", optional = true }
# we fix version including patch as some APIs got changed
# it is a temporary solutio until aya gets updated
aya-ebpf = { version = "=0.1.0" }

[dev-dependencies]
# Non Aya deps
dns-parser = { version = "0.8.0" }
cfg-if = "1.0.0"
uuid = "1.3.0"
bytes = { version = "1" }
thiserror = { version = "1.0" }
# Aya deps
aya = { version = "0.12.0" }
