[package]
name = "kunai-common"
version.workspace = true
authors.workspace = true
edition = "2021"
description = "Package providing shared structures between eBPF and userland"
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
# optional deps (only for userland)
base64ct = { workspace = true, optional = true , features=["alloc"]}
serde = { workspace = true, features = ["derive"], optional = true }
simple-dns = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"], optional = true }

kunai-macros = { workspace = true }
# Non Aya deps
paste = { workspace = true }

# Aya deps
aya = { workspace = true, optional = true }
aya-ebpf = { workspace = true }

[dev-dependencies]
# Aya deps
aya = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
bindgen = "0.72"

[features]
default = []
# to enable only when using this crate in BPF code
bpf = []
# to enable only when using this crate in userland code
user = ["aya", "base64ct", "serde", "simple-dns", "thiserror", "uuid"]
