[package]
name = "kunai-ebpf"
version = "0.3.0-alpha.1"
edition = "2021"
description = "Package containing eBPF code used by Kunai"
authors = ["Quentin JEROME <qjerome@rawsec.lu>"]
license = "GPL-3.0"
repository = "https://github.com/kunai-project/kunai"
publish = false

[features]
# enable debug probes
debug = []

[dependencies]
# we fix version including patch as some APIs got changed
# it is a temporary solutio until aya gets updated
aya-ebpf = { version = "=0.1.0" }
# this imports needs to be there otherwise 
# aya-ebpf will use 0.1.1 by default (breaking API
# compatibility). Can be removed if aya-ebpf gets
# updated.
aya-ebpf-macros = { version = "=0.1.0" }
kunai-common = { path = "../kunai-common" }
kunai-macros = { path = "../kunai-common/src/kunai-macros" }
paste = "1.0"

[[bin]]
name = "kunai-ebpf"
path = "src/main.rs"

[workspace]
members = []
