[package]
name = "kunai-ebpf"
version = "0.7.0-rc.1"
authors.workspace = true
edition = "2021"
description = "Package containing eBPF code used by Kunai"
repository = "https://github.com/kunai-project/kunai"
license = "GPL-3.0"
publish = false

[[bin]]
name = "kunai-ebpf"
path = "src/main.rs"

[dependencies]
aya-ebpf = { workspace = true }
aya-ebpf-macros = { workspace = true }
kunai-common = { workspace = true }
kunai-macros = { workspace = true }
paste = { workspace = true }

[features]
# enable debug probes
debug = []
