[package]
version = "0.2.6"
name = "kunai"
edition = "2021"
description = "Kunai userland crate"
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Non aya deps
hex = "0.4.3"
md-5 = "0.10.5"
sha1 = "0.10.5"
sha2 = "0.10.6"
chrono = { version = "0.4.24", features = ["clock"] }
libc = "0.2"
thiserror = "1.0"
procfs = "0.16"
ip_network = "0.4"

lru-st = { version = "0.2", features = ["sync"] }
aya = { version = "0.12.0", features = ["async_tokio"] }

# detection engine for events
gene = { version = "0.2.0" }
gene_derive = { version = "0.2.0" }

kunai-common = { path = "../kunai-common", features = ["user"] }
kunai-macros = { path = "../kunai-common/src/kunai-macros" }

# part of tokio framework
bytes = "1"
futures = "0.3"

aya-obj = { version = "0.1.0" }
anyhow = "1.0.68"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.39", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "fs",
    "io-util",
    "time",
    "sync",
] }
toml = "0.7.4"
serde = { version = "1.0.164", features = ["derive"] }
clap = { version = "4.3.4", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.6.1", features = ["serde", "v4", "v5"] }
object = { version = "0.34.0", features = ["elf"] }
huby = { version = "0.1", features = ["serde"] }
firo = { version = "0.1" }
yara-x = { git = "https://github.com/VirusTotal/yara-x.git", features = [
    "constant-folding",
    "exact-atoms",
    "fast-regexp",
    "console-module",
    "dotnet-module",
    "elf-module",
    "macho-module",
    "math-module",
    "hash-module",
    "pe-module",
    "string-module",
    "time-module",
    "lnk-module",
    "test_proto2-module",
    "test_proto3-module",
], default-features = false }
fs-walk = { version = "0.1.0" }

[dev-dependencies]
tempfile = "3.12.0"

[[bin]]
name = "kunai"
path = "src/bin/main.rs"

[[bin]]
name = "tests"
path = "src/tests/kernel.rs"
