[package]
name = "kunai"
edition = "2021"
description = "Kunai userland crate"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Aya deps
aya = { version = "0.13.0", features = ["async_tokio"] }
aya-obj = { version = "0.1.0" }

# Kunai deps
kunai-common = { path = "../kunai-common", features = ["user"] }
kunai-macros = { path = "../kunai-common/src/kunai-macros" }

# Non aya deps
hex = "0.4.3"
md-5 = "0.10.5"
sha1 = "0.10.5"
sha2 = "0.10.6"
chrono = { version = "0.4.24", features = ["clock"] }
libc = "0.2"
thiserror = "1.0"
procfs = "0.16"
ip_network = "0.4"
lru-st = { version = "0.2", features = ["sync"] }

# detection engine for events
gene = { version = "0.4.0" }
gene_derive = { version = "0.4.0" }

anyhow = "1.0.68"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.42", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "fs",
    "io-util",
    "time",
    "sync",
] }
bytes = "1"
serde = { version = "1.0.164", features = ["derive"] }
clap = { version = "4.3.4", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.6.1", features = ["serde", "v4", "v5"] }
object = { version = "0.34.0", features = ["elf"] }
huby = { version = "0.2", features = ["serde"] }
firo = { version = "0.2" }
yara-x = { version = "0.9.0" }
fs-walk = { version = "0.1.0" }
communityid = { version = "0.1", features = ["serde"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.12.0"

[[bin]]
name = "kunai"
path = "src/bin/main.rs"

[[bin]]
name = "tests"
path = "src/tests/kernel.rs"
