[package]
name = "kunai"
version.workspace = true
authors.workspace = true
edition = "2021"
description = "Kunai userland crate"
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "kunai"
path = "src/bin/main.rs"

[[bin]]
name = "tests"
path = "src/tests/kernel.rs"

[dependencies]
# Aya deps
aya = { workspace = true, features = ["async_tokio"] }
aya-obj = { workspace = true }

# Kunai deps
kunai-common = { workspace = true, features = ["user"] }
kunai-macros = { workspace = true }

# Non aya deps
anyhow = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["clock", "serde"] }
clap = { workspace = true, features = ["derive"] }
communityid = { workspace = true, features = ["serde"] }
env_logger = { workspace = true }
firo = { workspace = true }
flate2 = { workspace = true }
fs-walk = { workspace = true }
hex = { workspace = true }
huby = { workspace = true, features = ["serde"] }
humantime = { workspace = true }
ip_network = { workspace = true }
lazy-cache = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
lru-st = { workspace = true, features = ["sync"] }
magic-db = { workspace = true }
object = { workspace = true, features = ["elf"] }
procfs = { workspace = true }
pure-magic = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
uuid = { workspace = true, features = ["serde", "v4", "v5"] }
yara-x = { workspace = true }

# crypto
md-5 = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }

# detection engine for events
gene = { workspace = true }
gene_derive = { workspace = true }

[dev-dependencies]
tempfile = "3.12.0"

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependency so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
kunai-ebpf = { path = "../kunai-ebpf" }
