[package]
name = "xtask"
version = "0.2.0"
edition = "2021"
description = "Custom cargo command specific to the Kunai project"
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4.1", features = ["derive"] }
which = "4.4.0"
json = "0.12"
